test/integration/integration/tests/resources/tests/api-policy-with-jwt-generator.yaml
# Copyright (c) 2023, WSO2 LLC. (https://www.wso2.com) All Rights Reserved.
#
# WSO2 LLC. licenses this file to you under the Apache License,
# Version 2.0 (the "License"); you may not use this file except
# in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied. See the License for the
# specific language governing permissions and limitations
# under the License.

apiVersion: dp.wso2.com/v1alpha1
kind: API
metadata:
  name: api-policy-with-jwt-generator
  namespace: gateway-integration-test-infra
spec:
  apiDisplayName: API with Backend Base Path
  apiType: REST
  apiVersion: v1.0.0
  basePath: /api-policy-with-jwt-generator/v1.0.0
  isDefaultVersion: true
  #definitionFileRef: definition-file
  production:
    - httpRouteRefs:
      - api-policy-with-jwt-generator-httproute
  organization: wso2-org
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: api-policy-with-jwt-generator-httproute
  namespace: gateway-integration-test-infra
spec:
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: default
    namespace: apk-integration-test
    sectionName: httpslistener
  hostnames:
  - api-policy-with-jwt-generator.test.gw.wso2.com
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /v2/echo-full
    backendRefs:
    - group: dp.wso2.com
      kind: Backend
      name: infra-backend-v1
---
apiVersion: dp.wso2.com/v1alpha1
kind: APIPolicy
metadata:
  name: jwt-token-generator-policy
  namespace: gateway-integration-test-infra
spec:
  override:
    backendJwtToken:
      enabled: true
      encoding: "Base64"
      signingAlgorithm: "SHA256withRSA"
      header: "X-JWT-Assertion"
  targetRef:
    group: gateway.networking.k8s.io
    kind: API
    name:  api-policy-with-jwt-generator
---
apiVersion: dp.wso2.com/v1alpha1
kind: Backend
metadata:
  name: infra-backend-v1
  namespace: gateway-integration-test-infra
spec:
  services:
  - host: infra-backend-v1.gateway-integration-test-infra
    port: 8080
